замениоа на GSON + новый метод